[gd_scene load_steps=8 format=3 uid="uid://fbbo55pjqr5r"]

[ext_resource type="Texture2D" uid="uid://dsubi7sf726pj" path="res://assets/shop.png" id="1_6fmd6"]
[ext_resource type="Script" path="res://shop.gd" id="1_fj2b5"]
[ext_resource type="Texture2D" uid="uid://byy48stmewlxa" path="res://assets/armor.png" id="2_3e2x2"]
[ext_resource type="Texture2D" uid="uid://cyrd1b52w66oo" path="res://assets/boots.png" id="3_mmj7l"]
[ext_resource type="Texture2D" uid="uid://bgiju20b25w1l" path="res://assets/sword.png" id="4_mfyqt"]
[ext_resource type="Texture2D" uid="uid://ticpxjqlp2k4" path="res://assets/magic-wand.png" id="5_4qw1n"]
[ext_resource type="Texture2D" uid="uid://u4tmr5yg11yg" path="res://assets/chest.png" id="6_5swlo"]

[node name="shop" type="Node2D"]
script = ExtResource("1_fj2b5")

[node name="Shop" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_6fmd6")

[node name="Armor" type="Sprite2D" parent="."]
position = Vector2(567, 232)
scale = Vector2(0.114746, 0.114746)
texture = ExtResource("2_3e2x2")

[node name="Boots" type="Sprite2D" parent="."]
position = Vector2(570, -252)
scale = Vector2(0.12207, 0.12207)
texture = ExtResource("3_mmj7l")

[node name="Sword" type="Sprite2D" parent="."]
position = Vector2(563, -17)
rotation = -0.759218
scale = Vector2(0.135986, 0.135986)
texture = ExtResource("4_mfyqt")

[node name="Magic-wand" type="Sprite2D" parent="."]
position = Vector2(-571, -34)
rotation = -0.167552
scale = Vector2(0.12793, 0.12793)
texture = ExtResource("5_4qw1n")

[node name="Chest" type="Sprite2D" parent="."]
position = Vector2(-568, -255)
scale = Vector2(0.12793, 0.12793)
texture = ExtResource("6_5swlo")

[node name="armor_button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 504.0
offset_top = 164.0
offset_right = 635.0
offset_bottom = 294.0

[node name="sword_button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 499.0
offset_top = -84.0
offset_right = 630.0
offset_bottom = 46.0

[node name="boots_button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 503.0
offset_top = -308.0
offset_right = 634.0
offset_bottom = -178.0

[node name="dunno_button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -632.0
offset_top = 150.0
offset_right = -501.0
offset_bottom = 280.0

[node name="wand_button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -636.0
offset_top = -95.0
offset_right = -505.0
offset_bottom = 35.0

[node name="close_button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 642.0
offset_top = -446.0
offset_right = 700.0
offset_bottom = -387.0

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -633.0
offset_top = -323.0
offset_right = -502.0
offset_bottom = -193.0

[connection signal="pressed" from="armor_button" to="." method="_on_armor_button_pressed"]
[connection signal="pressed" from="sword_button" to="." method="_on_sword_button_pressed"]
[connection signal="pressed" from="boots_button" to="." method="_on_boots_button_pressed"]
[connection signal="pressed" from="dunno_button" to="." method="_on_dunno_button_pressed"]
[connection signal="pressed" from="wand_button" to="." method="_on_wand_button_pressed"]
[connection signal="pressed" from="close_button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
